created eventhandler for start button and create rest controller
wip

--- a/src/main/resources/templates/quiz/index.html
+++ b/src/main/resources/templates/quiz/index.html
@@ -3,6 +3,8 @@
 
 <div th:replace="fragments/head :: head"></div>
 
+<script src="/js/quiz.js"></script>
+
 <body>
 
 <div th:replace="fragments/navigation :: nav"></div>
