Updated Quiz controller, QuestionDAO, and quiz.js

--- a/src/main/resources/templates/quiz/fragments/currentQuestion.html
+++ b/src/main/resources/templates/quiz/fragments/currentQuestion.html
@@ -12,6 +12,7 @@
                 </button>
             </li>
         </ul>
-        <button id="nextButton" style="display:none;" onclick="loadNextQuestion()">Next</button>
+        <button id="nextButton" style="display:none;" >Next</button>
     </div>
 </div>
+<!-- onclick="loadQuestion()" -->
