updated attachAnswerListener function in JS

--- a/src/main/resources/templates/quiz/fragments/currentQuestion.html
+++ b/src/main/resources/templates/quiz/fragments/currentQuestion.html
@@ -1,16 +1,15 @@
-<!-- fragments/currentQuestion.html -->
 <div th:fragment="currentQuestion" xmlns:th="http://www.w3.org/1999/xhtml">
     <div id="quizContent">
         <h2 th:text="${question.questionText}">Question text will go here</h2>
         <ul>
-            <!-- Loop through each answer and display it as a button -->
+            <!-- Loop through each answer and display it as a radio button with label -->
             <li th:each="answer : ${question.answers}">
-                <input type="radio" th:attr="name='answer', value=${answer.isCorrect}, data-is-correct=${answer.isCorrect}"
+                <input type="radio" th:attr="name='answer', value=${answer.answerId}, data-is-correct=${answer.isCorrect}"
                        id="answer-${answer.answerId}">
-                <label th:for="'answer-' + ${answer.answerId}" th:text="${answer.answerText}"></label></li>
+                <label th:for="'answer-' + ${answer.answerId}" th:text="${answer.answerText}"></label>
+            </li>
         </ul>
+        <!-- The "Next" button will be hidden until an answer is selected -->
         <button id="nextButton" style="display:none;">Next</button>
     </div>
 </div>
-<!-- onclick="loadQuestion()" -->
-
