--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,7 +17,7 @@
     <div class="quiz-list">
         <!-- Each quiz rendered as a card -->
         <div class="card mb-2" th:each="quiz: ${quizzes}">
-            <a th:href="@{/quiz/{id}(id=${quiz.quizId})}" class="card-link">
+            <a th:href="@{/quiz/{id}(id=${quiz.quizId})}" class="card-link" th:if = "${quiz.isLive}">
                 <div class="card-header" th:text="${quiz.title}"></div>
             </a>
         </div>
