--- a/src/main/resources/templates/quiz/fragments/currentQuestion.html
+++ b/src/main/resources/templates/quiz/fragments/currentQuestion.html
@@ -1,5 +1,4 @@
-<div th:fragment="currentQuestion" xmlns:th="http://www.w3.org/1999/xhtml">
-    <div id="quizContent">
+<div id="quizContent" xmlns:th="http://www.w3.org/1999/xhtml">
         <h2 class="quiz-question" th:text="${question.questionText}">Question text will go here</h2>
         <ul class="quiz-answers">
             <!-- Loop through each answer and display it as a radio button with label -->
