--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,17 +12,18 @@
 <div th:replace="fragments/navigation :: nav"></div>
 
 <!-- Container for quiz cards -->
-<div class="quiz-container">
-    <h1 class="page-title">Available Quizzes</h1>
-    <div class="quiz-list">
+<div class="home-page-quiz-container">
+    <h1 class="home-page-title">Available Quizzes</h1>
+    <div class="home-page-quiz-list">
         <!-- Each quiz rendered as a card -->
-        <div class="card mb-2" th:each="quiz: ${quizzes}">
-            <a th:href="@{/quiz/{id}(id=${quiz.quizId})}" class="card-link" th:if = "${quiz.isLive}">
-                <div class="card-header" th:text="${quiz.title}"></div>
+        <div class="home-page-card mb-2" th:each="quiz: ${quizzes}">
+            <a th:href="@{/quiz/{id}(id=${quiz.quizId})}" class="home-page-card-link" th:if="${quiz.isLive}">
+                <div class="home-page-card-header" th:text="${quiz.title}"></div>
             </a>
         </div>
     </div>
 </div>
+
 
 </body>
 </html>
